--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
 [workspace]
 
 members = [
+    "proto",
     "client",
     "server",
 ]
+
+[workspace.dependencies]
+tonic = "0.8.3"
+prost = "0.11.5"
+tonic-build = "0.8.4"
