--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ members = [
 tonic = "0.8.3"
 prost = "0.11.5"
 tonic-build = "0.8.4"
+tokio-stream = "0.1.11"
+tokio = { version = "1.23.1", features = ["rt-multi-thread"] }
