Added CLI struct to server

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,3 +10,4 @@ proto = { path = "../proto" }
 tonic.workspace = true
 tokio.workspace = true
 tokio-stream.workspace = true
+clap.workspace = true
