--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ prost = "0.11.5"
 tonic-build = "0.8.4"
 tokio-stream = "0.1.11"
 tokio = { version = "1.23.1", features = ["rt-multi-thread"] }
+clap = { version = "4.0.32", features = [ "derive" ] }
