--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,6 @@ tonic = "0.8.3"
 prost = "0.11.5"
 tonic-build = "0.8.4"
 tokio-stream = "0.1.11"
-tokio = { version = "1.23.1", features = ["rt-multi-thread"] }
+tokio = { version = "1.23.1", features = ["rt-multi-thread", "fs"] }
 clap = { version = "4.0.32", features = [ "derive" ] }
 anyhow = "1.0.68"
