--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ tokio-stream = "0.1.11"
 tokio = { version = "1.23.1", features = ["rt-multi-thread", "fs"] }
 clap = { version = "4.0.32", features = [ "derive" ] }
 anyhow = "1.0.68"
+tracing = "0.1.37"
+tracing-subscriber = "0.3.16"
+tracing-attributes = "0.1.23"
