--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,3 +12,6 @@ tokio.workspace = true
 tokio-stream.workspace = true
 clap.workspace = true
 anyhow.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
+tracing-attributes.workspace = true
