--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,3 +10,8 @@ proto = { path = "../proto" }
 tonic.workspace = true
 tokio.workspace = true
 tokio-stream.workspace = true
+clap.workspace = true
+anyhow.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
+tracing-attributes.workspace = true
