--- a/e2e_tests/Cargo.toml
+++ b/e2e_tests/Cargo.toml
@@ -11,6 +11,10 @@ edition = "2021"
 client = { path = "../client" }
 server = { path = "../server" }
 test-context = "0.1.4"
+assert_cmd = "2.0.8"
+portpicker = "0.1.1"
+tempdir = "0.3.7"
+predicates = "2.1.5"
 
 [[test]]
 name = "tests"
