--- a/e2e_tests/Cargo.toml
+++ b/e2e_tests/Cargo.toml
@@ -15,6 +15,8 @@ assert_cmd = "2.0.8"
 portpicker = "0.1.1"
 tempdir = "0.3.7"
 predicates = "2.1.5"
+tonic = {workspace = true, features =["transport"]}
+tokio.workspace = true
 
 [[test]]
 name = "tests"
