Added cargo clippy to Github actions

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,6 +35,11 @@ jobs:
       with:
         command: fmt
         args: --all --check --verbose
+    - name: Run cargo clippy
+      uses: actions-rs/cargo@v1
+      with:
+        command: clippy
+        args: --all-targets --all-features -- -D warnings
     - name: Run cargo build
       uses: actions-rs/cargo@v1
       with:
