--- a/e2e_tests/Cargo.toml
+++ b/e2e_tests/Cargo.toml
@@ -15,9 +15,15 @@ portpicker = "0.1.1"
 tempdir = "0.3.7"
 predicates = "2.1.5"
 rstest = "0.16.0"
+criterion = {version="0.4.0", features=["async_tokio"]}
 tonic = {workspace = true, features =["transport"]}
 tokio.workspace = true
 
 [[test]]
 name = "tests"
 path = "src/tests.rs"
+
+[[bench]]
+name = "bench"
+harness = false
+path = "src/bench.rs"
