--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -43,4 +43,4 @@ jobs:
     - name: e2e-tests
       run: cargo make e2e-tests
     - name: e2e-bench
-      run: cargo make e2e-tests
+      run: cargo make e2e-bench
