--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 proto = { path = "../proto" }
 tonic.workspace = true
 tokio.workspace = true
-tokio-stream = {workspace = true, features = ["net"] }
+tokio-stream.workspace = true
 clap.workspace = true
 anyhow.workspace = true
 tracing.workspace = true
