--- a/e2e_tests/Cargo.toml
+++ b/e2e_tests/Cargo.toml
@@ -16,6 +16,8 @@ tempdir = "0.3.7"
 predicates = "2.1.5"
 rstest = "0.16.0"
 criterion = {version="0.4.0", features=["async_tokio"]}
+rand = "0.8.5"
+bytesize = "1.1.0"
 tonic = {workspace = true, features =["transport"]}
 tokio.workspace = true
 
