--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ members = [
 ]
 
 [workspace.dependencies]
-tonic = "0.8.3"
+tonic = {version="0.8.3", features=["tls"]}
 prost = "0.11.5"
 tonic-build = "0.8.4"
 tokio-stream = "0.1.11"
