--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: Swatinem/rust-cache@v2
     - uses: actions-rs/toolchain@v1
       with:
-        toolchain: stable
+        toolchain: 1.67.0
     - name: Install Protoc
       uses: arduino/setup-protoc@v1
       with:
