--- a/e2e_tests/Cargo.toml
+++ b/e2e_tests/Cargo.toml
@@ -18,6 +18,7 @@ rstest = "0.16.0"
 criterion = {version="0.4.0", features=["async_tokio"]}
 rand = "0.8.5"
 bytesize = "1.1.0"
+rcgen = "0.10.0"
 tonic = {workspace = true, features =["transport"]}
 tokio.workspace = true
 
